seeker-k8s-agent-injector/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: seeker-agent-injector
  labels:
    seeker/inject-agent: "false"
