seeker-k8s-agent-injector/deploy/webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seeker-k8s-agent-injector-webhook
  namespace: seeker-agent-injector
  labels:
    app: seeker-k8s-agent-injector-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seeker-k8s-agent-injector-webhook
  template:
    metadata:
      labels:
        app: seeker-k8s-agent-injector-webhook
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: seeker-k8s-agent-injector-webhook
          image: registry.gitlab.com/apac-sig-demo/deploy-scripts/seeker-k8s/seeker-k8s-agent-injector:2022.8.0
          imagePullPolicy: IfNotPresent
          args:
            - -tls-cert-file=/etc/webhook/certs/cert.pem
            - -tls-key-file=/etc/webhook/certs/key.pem
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/webhook/certs
              readOnly: true          
      volumes:
        - name: webhook-certs
          secret:
            secretName: seeker-k8s-agent-injector-webhook-certs
---
apiVersion: v1
kind: Service
metadata:
  name: seeker-k8s-agent-injector-webhook
  namespace: seeker-agent-injector
  labels:
    app: seeker-k8s-agent-injector-webhook
spec:
  ports:
    - port: 443
      targetPort: 7443
  selector:
    app: seeker-k8s-agent-injector-webhook
