seeker-k8s-agent-injector/deploy/registration.yaml
# File autogenerated by ./scripts/gen-certs.sh
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: seeker-k8s-agent-injector-webhook-registration
  labels:
    app: seeker-k8s-agent-injector-webhook-registration
    kind: mutator
webhooks:
  - name: seeker-agent-injector.seeker-k8s-agent-injector-webhook.svc    
    namespaceSelector:
      matchExpressions:
        - key: seeker/inject-agent
          operator: NotIn
          values: ["false"]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    clientConfig:
      service:
        name: seeker-k8s-agent-injector-webhook
        namespace: seeker-agent-injector
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVZVENDQXNtZ0F3SUJBZ0lRWks2TzVKYVB1Ty94eXkzc2wycTBKVEFOQmdrcWhraUc5dzBCQVFzRkFEQjEKTVI0d0hBWURWUVFLRXhWdGEyTmxjblFnWkdWMlpXeHZjRzFsYm5RZ1EwRXhKVEFqQmdOVkJBc01IR2hsYm1KQQphR1Z1WWkxNk5EUXdJQ2hJWlc0Z1FtRnljMmhoYXlreExEQXFCZ05WQkFNTUkyMXJZMlZ5ZENCb1pXNWlRR2hsCmJtSXRlalEwTUNBb1NHVnVJRUpoY25Ob1lXc3BNQjRYRFRJeU1EY3lOakV3TXpVeE5Wb1hEVEkwTVRBeU5qRXcKTXpVeE5Wb3dVREVuTUNVR0ExVUVDaE1lYld0alpYSjBJR1JsZG1Wc2IzQnRaVzUwSUdObGNuUnBabWxqWVhSbApNU1V3SXdZRFZR [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
